--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>The Hunter Yavitz Intention</title>
+		<title>projects - hunter yavitz intent</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,10 +18,10 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header">
 						<h1><a href="index.html">hunter yavitz</a></h1>
 						<nav>
-							<a href="#menu">go</a>
+							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
@@ -34,69 +34,31 @@
 								<li><a href="generic.html">projects</a></li>
 								<li><a href="elements.html">passion</a></li>
 							</ul>
-							<a href="#" class="close">close</a>
+							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon"><i class="fas fa-code-branch"></i></span></div>
-							<h2>hunter yavitz</h2>
-							<p>my intent to disrupt this industry.</p>
-						</div>
-					</section>
-
 				<!-- Wrapper -->
 					<section id="wrapper">
+						<header>
+							<div class="inner">
+								<h2>projects</h2>
+								<p>fingers-deep in creative work</p>
+							</div>
+						</header>
 
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+						<!-- Content -->
+							<div class="wrapper">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/alt/analyzer2.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">sentiment analyzer</h2>
-										<p>Analyze consumer reviews of businesses or products and return a big data feedback metric</p>
-										<a href="#" class="special">project demo</a>
-										<a href="#" class="special">source code</a>
-										<a href="#" class="special">video tutorial</a>
-									</div>
-								</div>
-							</section>
 
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/alt/order.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">remote ordering</h2>
-										<p>Create and track an online order via mobile / web app for any vendor</p>
-										<a href="#" class="special">demo</a>
-										<a href="#" class="special">source</a>
-										<a href="#" class="special">video tutorial</a>
-									</div>
-								</div>
-							</section>
+									<h3 class="major">Lorem ipsum dolor</h3>
+									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
 
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/alt/stock2.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">stock tracker</h2>
-										<p>Build a custom watchlist and follow active stock prices in realtime</p>
-										<a href="#" class="special">project demo</a>
-										<a href="#" class="special">source code</a>
-										<a href="#" class="special">video tutorial</a>
-									</div>
-								</div>
-							</section>
+									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
 
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
+									<h3 class="major">Vitae phasellus</h3>
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
@@ -110,24 +72,10 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
 									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
+
 								</div>
-							</section>
+							</div>
 
 					</section>
 
